--- a/src/app/loader/loader.component.html
+++ b/src/app/loader/loader.component.html
@@ -24,7 +24,7 @@
               <li><a routerLink="reset-password" class="text-white text-center my_account">Reset
               Password</a></li>
               <li><a (click)="logout()" class="text-white text-center my_account">Logout</a></li>
-              <li><a href="#" class="text-white text-center my_messages">Messages</a></li>
+              <!-- <li><a href="#" class="text-white text-center my_messages">Messages</a></li> -->
             </ul>
           </div>
         </div>
