--- a/src/app/messages-of-event/messages-of-event.component.html
+++ b/src/app/messages-of-event/messages-of-event.component.html
@@ -1,8 +1,3 @@
-
-
-
-
-
 <div class="initialStep">
 <section class="eventD_page_section d-flex flex-wrap align-content-center">
     <div class="container-fluid">
@@ -68,7 +63,7 @@
                 </div>
 
                 <div class="share_btn text-center">
-                    <button class="eventD_share">Share</button>
+                    <button class="eventD_share" (click)="invitation(singleEventDetails._id)">Share</button>
                 </div>
 
                 <div class="collect_detail text-center">
