--- a/src/app/my-event-details/my-event-details.component.html
+++ b/src/app/my-event-details/my-event-details.component.html
@@ -53,58 +53,66 @@
                             src="{{path}}{{singleEventDetails.profilePhoto}}" class="rounded-circle img-fluid">
                         <!-- <p class="text-white">Chnage Image</p> -->
                     </div>
-                    <div class="collect_detail text-center" [ngClass]="eventId">
+                    <div class="collect_detail text-center">
                         <!-- <span *ngFor="let item of activityName"> -->
                         <div class="collect1_img" *ngFor="let item of activityName">
-                            <div class="collect_img" (click)="activityDetails(singleEventDetails._id,item._id)">
+                            <div class="collect_img" (click)="activityDetails(eventId,item._id)">
                                 <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
                                     src="{{path}}{{singleEventDetails.profilePhoto}}">
                             </div>
                             <p class="text-white">{{item.activityName}}</p>
                         </div>
                         <!-- </span> -->
-                        <div class="collect1_img" (click)="totalCollection(singleEventDetails._id)">
+                        <div class="collect1_img" (click)="totalCollection(eventId)"
+                            ><!-- *ngIf="!isCelebrant" -->
                             <div class="collect_img">
                                 <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
                                     src="{{path}}{{singleEventDetails.profilePhoto}}">
                             </div>
                             <p class="text-center text-white">Collected</p>
                         </div>
-                        <div class="collect1_img" *ngIf="eventId">
-                            <div class="collect_img"  (click)="nextSection('seventhStep', 'initialStep')">
+                        <div class="collect1_img" ><!-- *ngIf="eventId && !isCelebrant" -->
+                            <div class="collect_img" (click)="nextSection('seventhStep', 'initialStep')">
                                 <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
                                     src="{{path}}{{singleEventDetails.profilePhoto}}">
                             </div>
                             <p class="text-white">Edit Event</p>
                         </div>
                         <div class="collect1_img">
-                            <div class="collect_img" (click)="viewMoreDeatils(singleEventDetails._id)">
+                            <div class="collect_img" (click)="viewMoreDeatils(eventId)">
                                 <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
                                     src="{{path}}{{singleEventDetails.profilePhoto}}">
                             </div>
                             <p class="text-white">View Event</p>
                         </div>
 
-                        <div class="collect1_img">
-                            <div class="collect_img" (click)="messageEvent(singleEventDetails._id)">
+                        <div class="collect1_img" ><!-- *ngIf="!isCelebrant" -->
+                            <div class="collect_img" (click)="messageEvent(eventId)">
                                 <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
                                     src="{{path}}{{singleEventDetails.profilePhoto}}">
                             </div>
                             <p class="text-white">Message</p>
                         </div>
-                        <div class="collect1_img">
-                            <div class="collect_img"  (click)="invitation(singleEventDetails._id)">
+                        <div class="collect1_img" ><!-- *ngIf="!isCelebrant" -->
+                            <div class="collect_img" (click)="invitation(eventId)">
                                 <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
                                     src="{{path}}{{singleEventDetails.profilePhoto}}">
                             </div>
                             <p class="text-white">Invited Guestes</p>
                         </div>
-                        <div class="collect1_img">
-                            <div class="collect_img"(click)="autoMessage(singleEventDetails._id)">
+                        <div class="collect1_img" ><!-- *ngIf="!isCelebrant" -->
+                            <div class="collect_img" (click)="autoMessage(eventId)">
                                 <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
                                     src="{{path}}{{singleEventDetails.profilePhoto}}">
                             </div>
                             <p class="text-white">Auto Message</p>
+                        </div>
+                        <div class="collect1_img" ><!-- *ngIf="!isCelebrant" -->
+                            <div class="collect_img" (click)="selectBank(eventId)">
+                                <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
+                                    src="{{path}}{{singleEventDetails.profilePhoto}}">
+                            </div>
+                            <p class="text-white">Select Bank Account</p>
                         </div>
                     </div>
                 </div>
@@ -115,44 +123,43 @@
 
 
 <div class="seventhStep" style="display:none">
-        <section class="edit_event_section d-flex flex-wrap align-content-center">
-            <div class="container-fluid">
-                <h3 class="text-center">Aso Ebi</h3>
-                <div class="edit_event">
-                    <div class="event_inner_content_box">
-                        <div class="event_inner_content ">
-                            <div class="new_event_sec edit_event_new">
-                                <div class="row">
-                                    <div class="col-3 m-auto pr-0 float-right new_event_menu">
-                                        <a><img src="/assets/images/edit_event_icon.png">
-                                            <p class="text-white">New Event</p>
-                                        </a>
-                                    </div>
-                                    <div class="col-9 p-0">
-                                        <span class="text-white event_name"> Hello {{userName}} </span>
+    <section class="edit_event_section d-flex flex-wrap align-content-center">
+        <div class="container-fluid">
+            <h3 class="text-center">Aso Ebi</h3>
+            <div class="edit_event">
+                <div class="event_inner_content_box">
+                    <div class="event_inner_content ">
+                        <div class="new_event_sec edit_event_new">
+                            <div class="row">
+                                <div class="col-3 m-auto pr-0 float-right new_event_menu">
+                                    <a><img src="/assets/images/edit_event_icon.png">
+                                        <p class="text-white">New Event</p>
+                                    </a>
+                                </div>
+                                <div class="col-9 p-0">
+                                    <span class="text-white event_name"> Hello {{userName}} </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div *ngIf="singleEventDetails">
+                            <div class="enter_event_title">
+                                <h6 class="text-center text-white">Event Hashtag</h6>
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <input type="text" class="form-control" id="title" [(ngModel)]="eventHashtag"
+                                            placeholder="# Enter your event hashtag here.." name="title">
                                     </div>
                                 </div>
                             </div>
-                            <div *ngIf="singleEventDetails">
-                                <div class="enter_event_title">
-                                    <h6 class="text-center text-white">Event Hashtag</h6>
-                                    <div class="form-group">
-                                        <div class="input-group">
-                                            <input type="text" class="form-control" id="title" [(ngModel)]="eventHashtag"
-                                                placeholder="# Enter your event hashtag here.." name="title">
-                                        </div>
+                            <div class="edit_event_btn">
+                                <div class="row">
+                                    <div class="col-sm-6 col-xs-12 edit_info"
+                                        (click)="editEventDeatils(eventId)">
+                                        <a class="edit_btn text-white  text-center">Edit Information </a>
                                     </div>
-                                </div>
-                                <div class="edit_event_btn">
-                                    <div class="row">
-                                        <div class="col-sm-6 col-xs-12 edit_info"
-                                            (click)="editEventDeatils(singleEventDetails._id)">
-                                            <a class="edit_btn text-white  text-center">Edit Information </a>
-                                        </div>
-                                        <div class="col-sm-6 delete_info col-xs-12"
-                                            (click)="deleteEvent(singleEventDetails._id)">
-                                            <a class="delete_event_btn text-center">Delete Event</a>
-                                        </div>
+                                    <div class="col-sm-6 delete_info col-xs-12"
+                                        (click)="deleteEvent(eventId)">
+                                        <a class="delete_event_btn text-center">Delete Event</a>
                                     </div>
                                 </div>
                             </div>
@@ -160,5 +167,6 @@
                     </div>
                 </div>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
+</div>
