--- a/src/app/collections/collections.component.html
+++ b/src/app/collections/collections.component.html
@@ -1,56 +1,31 @@
-<!-- <div class="row">
-    <div class="col-md-12" *ngFor="let activity of activitiesCollections">
-        <p>ActivityName:{{activity._id}}</p>
-        <div class="row">
-            <div class="col-md-12" *ngFor="let group of activity.group">
-               groupName: {{group.groupName}}
-                <div class="row">
-                    <div class="col-md-12" *ngFor="let item of group.item">
-                           <span *ngIf="item.itemGender=='female' ? getFemaleTotal(item.total) : null">
-                               {{ getFemaleTotal(item.total) }}
-                           </span>
-                           <span *ngIf="item.itemGender=='male' ? getMaleTotal(item.total) : null">
-                                {{ getMaleTotal(item.total) }}
-                            </span>
-                        </div>
-                    </div>
-                    Female: {{femaleTotal}} 
-                    Male: {{maleTotal}} 
-            </div>
-        </div>
-    </div>
-</div> -->
-
-
-
 <!-- new design  -->
 
 <section class="collection_slider_section d-flex flex-wrap align-content-center">
     <div class="container-fluid">
-            <div id="overlay" class="new_event_menu_box" style="display: none;">
-                    <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
-                        <a class="text-white "><img src="/assets/images/overlay.png">
-                            <p>Collections</p>
-                        </a>
-                    </div>
-                    <div class="">
-                        <div class="event_menu">
-                            <div class="all_menu_content  d-flex flex-wrap align-content-center">
-                                <ul>
-                                    <li><a routerLink="/home" class="text-white new_event">Home</a></li>
-                                    <li><a routerLink="/myEvent" class="text-white new_event">my event</a></li>
-                                    <li><a routerLink="/createEvent" class="text-white my_event">new event</a>
-                                    </li>
-                                    <li><a routerLink="/bankDetails" class="text-white my_account">bank
-                                            account</a></li>
-                                    <li><a routerLink="/reset-password" class="text-white my_account">Reset
-                                            Password</a></li>
-                                    <li><a (click)="logout()" class="text-white my_account">Logout</a></li>
-                                </ul>
-                            </div>
-                        </div>
+        <div id="overlay" class="new_event_menu_box" style="display: none;">
+            <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
+                <a class="text-white "><img src="/assets/images/overlay.png">
+                    <p>Collections</p>
+                </a>
+            </div>
+            <div class="">
+                <div class="event_menu">
+                    <div class="all_menu_content  d-flex flex-wrap align-content-center">
+                        <ul>
+                            <li><a routerLink="/home" class="text-white new_event">Home</a></li>
+                            <li><a routerLink="/myEvent" class="text-white new_event">my event</a></li>
+                            <li><a routerLink="/createEvent" class="text-white my_event">new event</a>
+                            </li>
+                            <li><a routerLink="/bankDetails" class="text-white my_account">bank
+                                    account</a></li>
+                            <li><a routerLink="/reset-password" class="text-white my_account">Reset
+                                    Password</a></li>
+                            <li><a (click)="logout()" class="text-white my_account">Logout</a></li>
+                        </ul>
                     </div>
                 </div>
+            </div>
+        </div>
         <h3 class="text-center">Aso Ebi</h3>
         <!-- collection slider starts -->
         <div class="collection_slider">
@@ -71,16 +46,16 @@
                             </div>
                         </div>
                         <div class="inner_content_btn text-center" *ngIf="totalCollection">
-                            <a href="#" class="tom_btn text-white text-center">{{totalCollection.eventHashTag}}</a>
+                            <a class="tom_btn text-white text-center">{{totalCollection.eventHashTag}}</a>
                         </div>
                         <div class="inner_content_btn total_btn">
-                            <a (click)="totalCost('slide_four','slide_one')" class="text-white float-left text-center">Total</a>
-                            <a  class="text-white float-right text-center">GuestList</a>
+                            <a class="text-white float-left text-center">Total</a>
+                            <a class="text-white float-right text-center">GuestList</a>
                         </div>
-                        <h3 class="number text-white text-center"><img src="/assets/images/N.png">{{maleTotal+femaleTotal}}</h3>
+                        <h3 class="number text-white text-center">{{maleTotal+femaleTotal | currency:"&#x20A6;"}}</h3>
                         <div class="inner_box_content">
                             <div class="inner_title">
-                                <h3 class="text-white">{{money._id}} ( <img src="/assets/images/N.png"> Total)</h3>
+                                <h3 class="text-white">{{money._id}} ({{money.totalPrice | currency:"&#x20A6;"}} )</h3>
                             </div>
                             <div>
                                 <div class="row">
@@ -96,7 +71,7 @@
                                             <p>Male</p>
                                         </div>
                                         <div class="col-8">
-                                            <p><img src="/assets/images/N.png"> {{maleTotal}}</p>
+                                            <p> {{maleTotal | currency:"&#x20A6;"}}</p>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -104,7 +79,7 @@
                                             <p>Female</p>
                                         </div>
                                         <div class="col-8">
-                                            <p><img src="/assets/images/N.png"> {{femaleTotal}}</p>
+                                            <p> {{femaleTotal | currency:"&#x20A6;"}}</p>
                                         </div>
                                     </div>
                                 </div>
@@ -132,13 +107,14 @@
                             </div>
                         </div>
                         <div class="inner_content_btn text-center" *ngIf="totalCollection">
-                            <a  class="tom_btn text-white text-center">{{totalCollection.eventHashTag}}</a>
+                            <a class="tom_btn text-white text-center">{{totalCollection.eventHashTag}}</a>
                         </div>
                         <div class="inner_content_btn total_btn">
                             <a (click)="totalCost('slide_four')" class="text-white float-left text-center">Total</a>
-                            <a  class="text-white float-right text-center">GuestList</a>
+                            <a class="text-white float-right text-center">GuestList</a>
                         </div>
-                        <h3 class="number text-white text-center" *ngIf="totalCollection"><img src="/assets/images/N.png">{{totalCollection.finalTotal}}</h3>
+                        <h3 class="number text-white text-center" *ngIf="totalCollection">
+                            {{totalCollection.finalTotal | currency:"&#x20A6;"}}</h3>
                         <div class="inner_box_content" *ngIf="totalCollection">
                             <div class="gender_list text-white">
                                 <div class="row">
@@ -146,7 +122,7 @@
                                         <p>All activities</p>
                                     </div>
                                     <div class="col-7">
-                                        <p><img src="/assets/images/N.png"> {{totalCollection.totalCollection}}</p>
+                                        <p> {{totalCollection.totalCollection | currency:"&#x20A6;"}}</p>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -154,7 +130,7 @@
                                         <p>Gift donations</p>
                                     </div>
                                     <div class="col-7">
-                                        <p><img src="/assets/images/N.png"> {{totalCollection.totalDonation}}</p>
+                                        <p> {{totalCollection.totalDonation | currency:"&#x20A6;"}}</p>
                                     </div>
                                 </div>
                             </div>
@@ -181,14 +157,13 @@
                             </div>
                         </div>
                         <div class="inner_content_btn text-center" *ngIf="totalCollection">
-                            <a href="#" class="tom_btn text-white text-center">{{totalCollection.eventHashTag}}</a>
+                            <a class="tom_btn text-white text-center">{{totalCollection.eventHashTag}}</a>
                         </div>
                         <div class="inner_content_btn total_btn">
                             <a (click)="totalCost('slide_four')" class="text-white float-left text-center">Total</a>
-                            <a  class="text-white float-right text-center">GuestList</a>
+                            <a class="text-white float-right text-center">GuestList</a>
                         </div>
-                        <h3 class="number text-white text-center"><a href="#"><img
-                                    src="/assets/images/search.png"></a><a href="#"><img
+                        <h3 class="number text-white text-center"><a><img src="/assets/images/search.png"></a><a><img
                                     src="/assets/images/download.png"></a> Share point. 412</h3>
                         <div class="inner_box_content">
                             <div class="scrollbar-rail scroll_content">
@@ -198,7 +173,8 @@
                                     </div>
                                     <div class="gender_list text-white" *ngFor="let list of allGuestList">
                                         <div class="list1">
-                                            <p>{{list.firstName}} {{list.lastName}} <img src="/assets/images/N.png">{{list.totalCollection}}</p>
+                                            <p>{{list.firstName}} {{list.lastName}}
+                                                {{list.totalCollection | currency:"&#x20A6;"}}</p>
                                         </div>
                                     </div>
                                 </div>
@@ -211,30 +187,30 @@
         </div>
         <!-- collection slider ends -->
 
-<div id="overlay" class="new_event_menu_box" style="display: none;">
-        <!-- <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
+        <div id="overlay" class="new_event_menu_box" style="display: none;">
+            <!-- <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
             <a class="text-white "><img src="/assets/images/overlay.png">
                 <p>Collections</p>
             </a>
         </div> -->
-        <div class="">
-            <div class="event_menu">
-                <div class="all_menu_content  d-flex flex-wrap align-content-center">
-                    <ul>
-                        <li><a routerLink="/home" class="text-white new_event">Home</a></li>
-                        <li><a routerLink="/myEvent" class="text-white new_event">my event</a></li>
-                        <li><a routerLink="/createEvent" class="text-white my_event">new event</a>
-                        </li>
-                        <li><a routerLink="/bankDetails" class="text-white my_account">bank
-                                account</a></li>
-                        <li><a routerLink="/reset-password" class="text-white my_account">Reset
-                                Password</a></li>
-                        <li><a (click)="logout()" class="text-white my_account">Logout</a></li>
-                    </ul>
+            <div class="">
+                <div class="event_menu">
+                    <div class="all_menu_content  d-flex flex-wrap align-content-center">
+                        <ul>
+                            <li><a routerLink="/home" class="text-white new_event">Home</a></li>
+                            <li><a routerLink="/myEvent" class="text-white new_event">my event</a></li>
+                            <li><a routerLink="/createEvent" class="text-white my_event">new event</a>
+                            </li>
+                            <li><a routerLink="/bankDetails" class="text-white my_account">bank
+                                    account</a></li>
+                            <li><a routerLink="/reset-password" class="text-white my_account">Reset
+                                    Password</a></li>
+                            <li><a (click)="logout()" class="text-white my_account">Logout</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 
 </section>
