--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -1,37 +1,4 @@
-<!-- Loader -->
-<div class="load" *ngIf="isDiable">
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-</div>
-<!-- Form of reset password  -->
-<!-- 
-<div *ngIf="!isDiable">
-    <div class="row">
-        <div class="col-md-6 m-auto pt-5">
-            <div class="card p-5">
-                <form [formGroup]="resetPasswordForm" autocomplete="off">
-                    <div class="form-group">
-                        <label for="currentPassword">currentPassword</label>
-                        <input type="password" class="form-control" formControlName="currentPassword">
-                    </div>
-                    <div class="form-group">
-                        <label for="newPassword">New password</label>
-                        <input type="password" class="form-control" formControlName="newPassword">
-                    </div>
-                    <div class="form-group">
-                        <label for="confirmPassword">confirmPassword</label>
-                        <input type="password" class="form-control" formControlName="confirmPassword"
-                            (input)="comparePassword(resetPasswordForm)">
-                    </div>
-                    <button type="button" class="btn btn-primary" (click)="resetPassword()"
-                        [disabled]="resetPasswordForm.invalid" [disabled]="isDisable">Submit</button>
-                </form>
-            </div>
-        </div>
-    </div>
-</div> -->
+
 
 
 <div>
@@ -48,7 +15,7 @@
                                     <p class="text-white">Reset Password</p>
                                 </div>
                                 <div class="col-9 p-0">
-                                    <span class="text-white event_name"> Hello Rao Info Tech </span>
+                                    <span class="text-white event_name" *ngIf="userName"> Hello {{userName}} </span>
                                 </div>
                             </div>
                         </div>
